8210762: [lworld] hotspot test Unsafe/RangeCheck.java fails with -Xcomp -XX:+EnableValhalla

Reviewed-by: roland